--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "dompurify": "^3.2.3",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "next": "^15.1.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
@@ -25,6 +28,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
+    "react-loading-skeleton": "^3.5.0",
     "react-lottie": "^1.2.10",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
