--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "next": "^15.1.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icon": "^1.0.0",
