--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "cra-template": "1.2.0",
     "dompurify": "^3.2.3",
     "embla-carousel-react": "^8.5.2",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
